--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Pop!</title>
+<title>Mattfahs</title>
 </head>
 
 <body>
@@ -80,12 +80,13 @@
 	</div>
 	<div id="work"><p>Other Clients</p>
 		
-	  	<div id="modal5"><a class="close" href="#work"><img src="../img/744706org.jpg" width="935" height="300" alt=""/><h6 class="x">X</h6></a></div>
-	  <div id="modal6"><a class="close" href="#work"><img src="../img/flint.png" width="935" height="450" alt=""/><h6 class="x">X</h6></a></div>
-	  <div id="modal4"><a class="close" href="#work"><img src="../img/Sketch-series-5-color(2).png" width="935" height="450" alt=""/><h6 class="x">X</h6></a></div>
-		<div id="modal3"><a class="close" href="#work"><img src="../img/Finished-Logo(2).png" alt"Hansan"><h6 class="x">X</h6></a></div>
-	<div id="modal2"><a class="close" href="#work"><img src="../img/Gem1.png" width="935" height="450" alt=""/><h6 class="x">X</h6></a></div>
-	<div id="modal7"><a class="close" href="#work"><img src="../img/fresh2.jpg" width="600" height="600" alt=""/><h6 class="x">X</h6></a></div>
+	  	<div id="modal5"><a class="close" href="#work"><img src="img/744706org.jpg" width="600" height="300" alt=""/>
+  	    <h6 class="x">X</h6></a></div>
+	  <div id="modal6"><a class="close" href="#work"><img src="file:///E|/Design Work/img/flint.png" width="935" height="450" alt=""/><h6 class="x">X</h6></a></div>
+	  <div id="modal4"><a class="close" href="#work"><img src="file:///E|/Design Work/img/Sketch-series-5-color(2).png" width="935" height="450" alt=""/><h6 class="x">X</h6></a></div>
+		<div id="modal3"><a class="close" href="#work"><img src="file:///E|/Design Work/img/Finished-Logo(2).png" alt"Hansan"><h6 class="x">X</h6></a></div>
+	<div id="modal2"><a class="close" href="#work"><img src="file:///E|/Design Work/img/Gem1.png" width="935" height="450" alt=""/><h6 class="x">X</h6></a></div>
+	<div id="modal7"><a class="close" href="#work"><img src="file:///E|/Design Work/img/fresh2.jpg" width="600" height="600" alt=""/><h6 class="x">X</h6></a></div>
     <div id="modal1"><a class="close" href="#work"><h6 class="x">X</h6></a><p style="padding: 10px; color: floralwhite">If you need design services please reach out. </p><form action="mailto:mattfahs@mattfahs.com" method="post" enctype="text/plain" style="padding: 10px;">
 Name:<br>
 <input type="text" name="name"><br>
@@ -112,7 +113,7 @@ Comment:<br>
     </tr>
   </tbody>
 </table>
-	  <h4>This site was made by mattfahs designs all rights reserved | www.mattfahs.com | <a href="email">mattfahs@mattfahs.com</a> </h4>
+	  <h4>This site was made by mattfahs designs all rights reserved | www.mattfahs.com | <a href="file:///E|/Design Work/Test/email">mattfahs@mattfahs.com</a> </h4>
 	</div>
 </body>
 	<style>
@@ -126,7 +127,7 @@ Comment:<br>
 			font-size: 50px;	
 		}
 		#Contain{
-			background-image: url("../img/woman-holding-disposable-cup-2930722.jpg");
+			background-image:url("img/woman-holding-disposable-cup-2930722.jpg");
 			background-size: 100%, 100%;
 			background-position: center;
 			background-repeat: no-repeat;
@@ -252,7 +253,7 @@ Comment:<br>
 		}
 		#about{
 			width: auto;
-			background-image:url(../img/jonathan-roger-LY1eyQMFeyo-unsplash.jpg);
+			background-image:url(file:///E|/Design%20Work/img/jonathan-roger-LY1eyQMFeyo-unsplash.jpg);
 			background-attachment: fixed;
 			background-repeat: no-repeat;
 			background-position:center;
