--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ Comment:<br>
 		}
 		#about{
 			width: auto;
-			background-image:url(file:///E|/Design%20Work/img/jonathan-roger-LY1eyQMFeyo-unsplash.jpg);
+			background-image:url("img/photo-1514565131-fce0801e5785.webp");
 			background-attachment: fixed;
 			background-repeat: no-repeat;
 			background-position:center;
