--- a/index.html
+++ b/index.html
@@ -82,11 +82,15 @@
 		
 	  	<div id="modal5"><a class="close" href="#work"><img src="img/744706org.jpg" width="600" height="300" alt=""/>
   	    <h6 class="x">X</h6></a></div>
-	  <div id="modal6"><a class="close" href="#work"><img src="file:///E|/Design Work/img/flint.png" width="935" height="450" alt=""/><h6 class="x">X</h6></a></div>
-	  <div id="modal4"><a class="close" href="#work"><img src="file:///E|/Design Work/img/Sketch-series-5-color(2).png" width="935" height="450" alt=""/><h6 class="x">X</h6></a></div>
-		<div id="modal3"><a class="close" href="#work"><img src="file:///E|/Design Work/img/Finished-Logo(2).png" alt"Hansan"><h6 class="x">X</h6></a></div>
-	<div id="modal2"><a class="close" href="#work"><img src="file:///E|/Design Work/img/Gem1.png" width="935" height="450" alt=""/><h6 class="x">X</h6></a></div>
-	<div id="modal7"><a class="close" href="#work"><img src="file:///E|/Design Work/img/fresh2.jpg" width="600" height="600" alt=""/><h6 class="x">X</h6></a></div>
+	  <div id="modal6"><a class="close" href="#work"><img src="img/flint.png" width="935" height="540" alt=""/>
+      <h6 class="x">X</h6></a></div>
+	  <div id="modal4"><a class="close" href="#work"><img src="img/Sketch-series-5-color(2).png" width="935" height="450" alt=""/><img src="img/Gem1.png" width="935" height="540" alt=""/>
+      <h6 class="x">X</h6></a></div>
+		<div id="modal3"><a class="close" href="#work"><img src="img/Finished-Logo(2).png" width="935" height="540" alt=""/>
+	    <h6 class="x">X</h6></a></div>
+	<div id="modal2"><a class="close" href="#work"><h6 class="x">X</h6></a></div>
+	<div id="modal7"><a class="close" href="#work"><img src="img/fresh2.jpg" width="594" height="498" alt=""/>
+    <h6 class="x">X</h6></a></div>
     <div id="modal1"><a class="close" href="#work"><h6 class="x">X</h6></a><p style="padding: 10px; color: floralwhite">If you need design services please reach out. </p><form action="mailto:mattfahs@mattfahs.com" method="post" enctype="text/plain" style="padding: 10px;">
 Name:<br>
 <input type="text" name="name"><br>
